# novalug-ai

./: .gitignore  INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml
data/: baseball.csv  cosine_similarity_matrix.csv  game_one_recap.txt  hitting.csv
data/game_recaps/: game_recap_2.txt  game_recap_3.txt  game_recap_4.txt  game_recap_5.txt  game_recap_6.txt
data/schedule/: schedule_with_scores.csv
data/similarity/: cosine_similarity_matrix.csv
data/stats/: hitting.csv
models/xgb/: hitting_model.json  hitting_with_predictions.csv
novalug/: baseball.py  hello_xgboost.py  hitting.py  site.py
novalug/ant/: anthrophic.py
novalug/baseball/: game_state.py
novalug/hf/: game_sentiment.py  good_game.py  happy.py  recommend_similar_hitter.py  similarity.py  summarize_game_recap.py  summary.py
novalug/li/: agents.py  agents_2.py  baseball_rules.py  game_state.py  pitching_workflow.py  rag.py
novalug/pages/: page_two.py
novalug/sb3/: learn_to_pitch.py  pitch.py  pitching_env.py  practice_calling_pitches.py
novalug/sbert/: recommend_similar_hitter.py
novalug/sl/: site.py
novalug/sl/pages/: chat.py  examples.py  hitting_stats.py  page_one.py  page_three.py
novalug/wvt/: query.py  rag.py  ready.py  vectorize.py
novalug/xgb/: hitting.py  regression_xgboost.py
